# exif-heal

./: .gitignore  DESIGN.md  ISSUES.md  PLAN.md  README.md  pyproject.toml
src/exif_heal/: __init__.py  applier.py  backup.py  cache.py  cli.py  confidence.py  exiftool.py  gps_infer.py  models.py  report.py  scanner.py  time_infer.py
tests/: conftest.py  test_cache.py  test_cli.py  test_confidence.py  test_exiftool.py  test_gps_infer.py  test_time_infer.py
